Fix avatar distortion by setting explicit min-width and min-height

--- a/style.css
+++ b/style.css
@@ -496,6 +496,8 @@ header.scrolled .logo {
 .avatar {
     width: 50px;
     height: 50px;
+    min-width: 50px;
+    min-height: 50px;
     background: var(--primary);
     color: var(--white);
     display: flex;
